--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,8 @@
             </p>
 
             <p>
-              <a class="btn btn-primary btn-lg">
+              <a href="/releases/harp-0.9.tar.gz"
+                 class="btn btn-primary btn-lg">
                 <span class="glyphicon glyphicon-download-alt"></span>
                 Download latest version
               </a>
@@ -52,8 +53,19 @@
           </div>
 
           <div class="alert alert-info">
-            Version 1.0 coming soon
+            Version 0.9 (5 Sep 2014)
+            <a href="/releases/harp-0.9.tar.gz" title="Download">
+              <span class="glyphicon glyphicon-download-alt"></span>
+              Download
+            </a>
+            -
+            <a href="/doc/0.9" title="Documentation">Doc</a>
           </div>
+
+          <a href="/releases" class="btn btn-default pull-right">
+            <span class="glyphicon glyphicon-list"></span>
+            All releases
+          </a>
         </aside>
 
         <div class="row">
@@ -84,7 +96,7 @@
               </dd>
 
               <dt>
-                <a href="doc/1.0">
+                <a href="doc/0.9">
                   Documentation for the latest version
                 </a>
               </dt>
@@ -115,5 +127,16 @@
         </footer>
       </div>
     </div>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-54507577-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
