--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
             </p>
 
             <p>
-              <a href="/releases/harp-1.0.tar.gz"
+              <a href="/releases/harp-1.0p1.tar.gz"
                  class="btn btn-primary btn-lg">
                 <span class="glyphicon glyphicon-download-alt"></span>
                 Download latest version
@@ -56,6 +56,14 @@
         <aside class="col-md-4">
           <div class="page-header">
             <h1>Releases</h1>
+          </div>
+
+          <div class="alert alert-info">
+            Version 1.0p1 (16 Oct 2014)
+            <a href="/releases/harp-1.0p1.tar.gz" title="Download">
+              <span class="glyphicon glyphicon-download-alt"></span>
+              Download
+            </a>
           </div>
 
           <div class="alert alert-info">
@@ -120,9 +128,9 @@
           </p>
 
           <div class="well well-sm">
-            curl http://www.harphttp.org/releases/harp-1.0.tar.gz -o harp-1.0.tar.gz<br><br>
-            tar xzf harp-1.0.tar.gz<br>
-            cd harp-1.0<br><br>
+            curl http://www.harphttp.org/releases/harp-1.0p1.tar.gz -o harp-1.0p1.tar.gz<br><br>
+            tar xzf harp-1.0p1.tar.gz<br>
+            cd harp-1.0p1<br><br>
             ./configure<br>
             make<br><br>
             sudo make install
