--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Harp, a reverse HTTP proxy</title>
+    <title>Harp, an HTTP reverse proxy</title>
 
     <meta charset="utf-8">
     <meta name="description"
@@ -44,7 +44,7 @@
             </p>
 
             <p>
-              <a href="/releases/harp-1.0p1.tar.gz"
+              <a href="/releases/harp-1.1.tar.gz"
                  class="btn btn-primary btn-lg">
                 <span class="glyphicon glyphicon-download-alt"></span>
                 Download latest version
@@ -56,6 +56,16 @@
         <aside class="col-md-4">
           <div class="page-header">
             <h1>Releases</h1>
+          </div>
+
+          <div class="alert alert-info">
+            Version 1.1 (23 Nov 2014)
+            <a href="/releases/harp-1.1.tar.gz" title="Download">
+              <span class="glyphicon glyphicon-download-alt"></span>
+              Download
+            </a>
+            -
+            <a href="/doc/1.1" title="Documentation">Doc</a>
           </div>
 
           <div class="alert alert-info">
@@ -128,9 +138,9 @@
           </p>
 
           <div class="well well-sm">
-            curl http://www.harphttp.org/releases/harp-1.0p1.tar.gz -o harp-1.0p1.tar.gz<br><br>
-            tar xzf harp-1.0p1.tar.gz<br>
-            cd harp-1.0p1<br><br>
+            curl http://www.harphttp.org/releases/harp-1.1.tar.gz -o harp-1.1.tar.gz<br><br>
+            tar xzf harp-1.1.tar.gz<br>
+            cd harp-1.1<br><br>
             ./configure<br>
             make<br><br>
             sudo make install
@@ -164,7 +174,7 @@
             </dd>
 
             <dt>
-              <a href="doc/1.0">
+              <a href="doc/1.1">
                 Documentation for the latest version
               </a>
             </dt>
